--- a/yes.html
+++ b/yes.html
@@ -21,9 +21,11 @@
  </style>
 <br>
      <center> 
-    <h2><em>YaY eyamata kiwwa... eya mata kiwwa..<br>eya mata kiw..wa<br>A..dareyi kiyala..</em></h2>
+    <h2><em>YaY eya mata kiwwa... eya mata kiwwa..<br>eya mata kiw..wa<br>A..dareyi kiyala..</em></h2>
        
      <h2>Hi Pini lamayo.... mama danan hitiya :-P </h2>
+
+       <h1>Wihiluwak hode..tharaha wenna ottu na..</h1>
     </center>
     
   </body>
