--- a/yes.html
+++ b/yes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>OK YaY!!!</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
@@ -14,7 +14,7 @@
     }
 
     #gifImage {
-      width: 300px;
+      max-width: 80%;
       height: auto;
       border-radius: 15px; /* Add rounded corners to the image */
       box-shadow: 5px 5px 10px #888888; /* Add a subtle shadow */
