--- a/yes.html
+++ b/yes.html
@@ -14,11 +14,9 @@
     }
 
     #gifImage {
-      max-width: 80%;
-      height: auto;
-      border-radius: 15px; /* Add rounded corners to the image */
-      box-shadow: 5px 5px 10px #888888; /* Add a subtle shadow */
-    }
+      width: 300px; /* Set your desired width */
+     height: auto; /* Auto-adjust height to maintain aspect ratio */
+      }
 
     h1 {
       font-weight: bold;
@@ -33,10 +31,9 @@
     }
 
     img {
-      max-width: 100%;
+      max-width: 50%;
       height: auto;
-      border-radius: 10px; /* Add rounded corners to all images */
-    }
+       }
   </style>
 </head>
 <body>
