--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </center>
   <script>
     let redButtonLabelIndex = 0;
-    const redButtonLabels = ["Are you sure?", "Really Sure??", "Are you positive???", "Pini Plz?",
+    const redButtonLabels = ["Are you sure?", "Really Sure??", "Are you positive???", "plz??",
       "Just think about it?", "If you say no, I'll be very sad", "I'll be very very sad",
       "I'll be very very very sad", "I'll be very very very very sad", "Ok fine, I'll stop asking...",
       "Just kidding, PLEASE SAY YES", "I'll be very very very very very sad", "You are breaking my heart ;("];
